# localagent

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/locomo/: HISTORY.md  README.md  __init__.py  __main__.py  answer.py  dataset.py  ingest.py  measure_profile.py  measure_recall.py  metrics.py  run.py  runtime.py
benchmarks/locomo/fixtures/: tiny.json
benchmarks/stm/: README.md  __init__.py  __main__.py  metrics.py  run.py  scenarios.py
benchmarks/stm/fixtures/: cases.json
config/: config.example.json  model_servers.yaml.example
docs/: PRD.md  TDD.md  test-catalog-review.md
examples/: audit-report-sample.md  env.local-only.example  hindsight-demo.md  hindsight-demo.sh  mem0-demo.md  mem0-demo.sh  model_servers.local-only.yaml.example  product-tour.md  product-tour.zh-CN.md  sample-project-notes.md  walkthrough.md  walkthrough.zh-CN.md
scripts/: la-completion.bash  la-completion.zsh
src/localagent/: __init__.py  chat_repl.py  cli.py  completion.py  config.py  env_config.py  hardware.py  i18n.py  logging_setup.py  model_servers.py  ocr_cmd.py  ollama_setup.py  session_commands.py  tone.py
src/localagent/agent/: intent_clarification.py  observe.py  runtime.py
src/localagent/audit/: __init__.py  events.py  health.py  report.py  security.py  usage.py
src/localagent/aware/: __init__.py  browser_tabs.py  commands.py  context_store.py  digest.py  engagement.py  episode.py  hypothesis.py  input_activity.py  platform_paths.py  policy.py  profile.py  repl.py  rollup.py  scenes.py  schedule.py  store.py  suggestion.py  summary.py  tick.py  timewin.py  types.py
src/localagent/aware/sensors/: __init__.py  apps.py  base.py  browser.py  fs.py  git.py  stub.py  terminal.py
src/localagent/ingest/: __init__.py  add_file.py  chatgpt_archive.py  chunker.py  conversation_cold.py  engine.py  loader.py  ocr.py  pipeline.py  progress.py  sync_file.py  sync_index.py  task_logs.py  tasks.py  types.py  vision.py  worker.py
src/localagent/ingest/adapters/: __init__.py  aware.py  chat.py  chatgpt.py  doc.py  kb.py  news.py  polish.py  rebuild.py  summarize.py  text.py
src/localagent/knowledge/: __init__.py  bm25_store.py  chroma_store.py  hybrid.py  indexer.py  store.py  time_filter.py
src/localagent/memory/: __init__.py  backend.py  chatgpt_import.py  consolidate.py  conversation_extract.py  core_profile.py  decompose.py  display.py  embeddings.py  enrich.py  entities.py  exit_extract.py  hindsight_client.py  memory_class.py  profile_pin.py  query.py  reflect_loop.py  rememorize.py  rerank.py  reset.py  save.py  scoped_recall.py  store.py  summarize.py  temporal.py  temporal_intent.py  value_filter.py
src/localagent/memory/backends/: __init__.py  json_backend.py  mem0_backend.py
src/localagent/memory/graph/: __init__.py  cypher_guard.py  cypher_templates.py  expand.py  extract.py  neo4j_store.py  precise_query.py  protect.py  store.py
src/localagent/models/: router.py
src/localagent/news/: __init__.py  brief.py  browser.py  chat_bridge.py  commands.py  fetch.py  links.py  mark.py  nav.py  notify.py  open_url.py  profile.py  rank.py  read.py  rss.py  schedule.py  store.py  summary_parse.py  sync.py
src/localagent/pending/: __init__.py  queue.py
src/localagent/persist/: chatgpt.py  chatgpt_memories.py  conversations.py  sessions.py
src/localagent/resources/: __init__.py  config.example.json  core_profile.example.json  env.example  model_servers.yaml.example
src/localagent/status/: __init__.py  daily.py  layers.py  report.py
src/localagent/summarize/: __init__.py  document.py  repl.py  session_index.py  sessions.py
src/localagent/tools/: __init__.py  action_receipt.py  approval.py  files.py  search.py  shell.py  web_search.py
src/localagent/ui/: __init__.py  banner.py  clipboard.py  console.py  prompt_session.py
src/localagent/workspace/: __init__.py  context.py  tasks.py
src/localagent/writing/: __init__.py  polish.py  scenes.py
tests/: conftest.py  suite_summary.py  test_agent_runtime.py  test_approval.py  test_audit.py  test_audit_guardrails.py  test_aware.py  test_aware_perf.py  test_chat.py  test_chatgpt_import.py  test_cli.py  test_completion.py  test_conversation_cold.py  test_conversation_persist.py  test_core.py  test_daily_status.py  test_env_config.py  test_exit_extract.py  test_files.py  test_hardware.py  test_hindsight_client.py  test_i18n.py  test_ingest.py  test_ingest_engine.py  test_intent_clarification.py  test_locomo_benchmark.py  test_logging.py  test_memory_backend.py  test_memory_class.py  test_memory_enrich.py  test_memory_graph.py  test_memory_query.py  test_memory_recall_priority.py  test_memory_store.py  test_memory_temporal.py  test_neo4j_precise.py  test_news.py  test_observe.py  test_ocr.py  test_ollama_setup.py  (+24 more)
tests/e2e/: conftest.py  helpers.py  test_la_commands.py  test_la_completion.py  test_la_graph.py  test_la_journeys.py  test_la_live.py  test_la_memory.py  test_la_ops.py  test_la_pending.py  test_la_perf.py  test_la_rag.py  test_la_safety.py  test_la_websearch.py
website/: .assetsignore  README.md  index.html  script.js  styles.css
website/demos/: render.sh  render_demos.py  scenes.json
website/demos/tapes/: README.md  deepread.en.tape  deepread.zh.tape  memory.en.tape  memory.zh.tape  setup.en.tape  setup.zh.tape
