[project]
name = "la-localagent"
dynamic = ["version"]
description = "Local First. Memory Forever. Actions Automated. Local AI that remembers and gets things done."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hzh" }]
keywords = ["ai", "cli", "agent", "memory", "ollama", "langgraph", "personal-assistant", "local", "local-first", "actions", "mac", "windows", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openpyxl>=3.1.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "trafilatura>=2.0.0",
    "ddgs>=9.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "prompt-toolkit>=3.0.0",
    "cursor-sdk>=0.1.9",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    # [nlp]=spaCy lemmas/entities; fastembed=Qdrant BM25 (avoid full mem0ai[extras] bloat)
    "mem0ai[nlp]>=1.0.0",
    # spaCy model is not a transitive dep of mem0ai[nlp]; pin so install (not first chat) fetches it
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastembed>=0.3.1",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
# full 已并入默认依赖，保留空 extra 以兼容旧安装命令
full = []
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
]
# Optional cross-encoder rerank (LA_MEMORY_RERANK_BACKEND=cross_encoder|auto).
rerank = [
    "sentence-transformers>=3.0.0",
]
# Optional Neo4j for precise graph queries (counts / aggregations / multi-hop).
neo4j = [
    "neo4j>=5.0.0",
]

[project.urls]
Homepage = "https://localagent.zhenghui7338.workers.dev/"
Repository = "https://github.com/hezhenghui7338/localagent"
Issues = "https://github.com/hezhenghui7338/localagent/issues"

[project.scripts]
la = "localagent.cli:main"
LA = "localagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/localagent/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/localagent"]

[tool.hatch.build.targets.wheel.force-include]
"src/localagent/resources/env.example" = "localagent/resources/env.example"
"src/localagent/resources/model_servers.yaml.example" = "localagent/resources/model_servers.yaml.example"
"src/localagent/resources/core_profile.example.json" = "localagent/resources/core_profile.example.json"
"src/localagent/resources/config.example.json" = "localagent/resources/config.example.json"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/README.zh-CN.md",
    "/LICENSE",
    "/pyproject.toml",
    "/.env.example",
    "/config/model_servers.yaml.example",
    "/config/config.example.json",
    "/data/core_profile.example.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "tests/e2e", "."]
# Parallel by default; use -n0 for serial debugging. loadgroup keeps xdist_group together.
# End-of-run unit/e2e per-file summary is enabled by default (see tests/suite_summary.py).
addopts = "-n auto --dist loadgroup -m 'not e2e and not e2e_live'"
markers = [
    "e2e: subprocess end-to-end tests against installed LA CLI",
    "e2e_live: requires live Ollama with a completion model",
    "serial: wall-clock budget / resource tests; grouped via xdist_group",
]

[tool.ruff]
line-length = 100
target-version = "py310"
